; ModuleID = '/home/carl/AnghaBench/linux/drivers/tty/serial/extr_atmel_serial.c_atmel_calc_fidi.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/tty/serial/extr_atmel_serial.c_atmel_calc_fidi.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.uart_port = type { i32 }
%struct.serial_iso7816 = type { i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.uart_port*, %struct.serial_iso7816*)* @atmel_calc_fidi to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @atmel_calc_fidi(%struct.uart_port* %0, %struct.serial_iso7816* %1) #0 {
  %3 = alloca %struct.uart_port*, align 8
  %4 = alloca %struct.serial_iso7816*, align 8
  %5 = alloca i64, align 8
  store %struct.uart_port* %0, %struct.uart_port** %3, align 8
  store %struct.serial_iso7816* %1, %struct.serial_iso7816** %4, align 8
  store i64 0, i64* %5, align 8
  %6 = load %struct.serial_iso7816*, %struct.serial_iso7816** %4, align 8
  %7 = getelementptr inbounds %struct.serial_iso7816, %struct.serial_iso7816* %6, i32 0, i32 1
  %8 = load i64, i64* %7, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %24

10:                                               ; preds = %2
  %11 = load %struct.serial_iso7816*, %struct.serial_iso7816** %4, align 8
  %12 = getelementptr inbounds %struct.serial_iso7816, %struct.serial_iso7816* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 8
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %24

15:                                               ; preds = %10
  %16 = load %struct.serial_iso7816*, %struct.serial_iso7816** %4, align 8
  %17 = getelementptr inbounds %struct.serial_iso7816, %struct.serial_iso7816* %16, i32 0, i32 1
  %18 = load i64, i64* %17, align 8
  store i64 %18, i64* %5, align 8
  %19 = load i64, i64* %5, align 8
  %20 = load %struct.serial_iso7816*, %struct.serial_iso7816** %4, align 8
  %21 = getelementptr inbounds %struct.serial_iso7816, %struct.serial_iso7816* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 8
  %23 = call i32 @do_div(i64 %19, i32 %22)
  br label %24

24:                                               ; preds = %15, %10, %2
  %25 = load i64, i64* %5, align 8
  %26 = trunc i64 %25 to i32
  ret i32 %26
}

declare dso_local i32 @do_div(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
